<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context=".Amendment_Personal_File">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:layout_marginTop="-280dp"
        />

    <LinearLayout
        android:id="@+id/personal_life"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="38dp"
        android:layout_marginTop="56dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_file"
            android:layout_marginTop="8dp"
            android:layout_marginRight="86dp"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:fontFamily="@font/elmessirisemibold"

            />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:src="@drawable/icon6"/>

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:background="@drawable/shape1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutDirection="rtl"
            android:layout_marginTop="100dp"
            android:orientation="vertical">
                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/name"
                          android:textColor="@color/black"
                          android:layout_alignParentRight="true"
                          android:layout_marginBottom="9dp"
                          android:layout_marginRight="16dp"
                          android:fontFamily="@font/elmessirisemibold"
                          android:textSize="12dp"/>
                      <LinearLayout
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_alignParentRight="true"
                          android:background="@drawable/shape6"
                          android:layout_below="@+id/companyname"
                          android:orientation="horizontal"
                          >

                          <ImageView
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:src="@drawable/icon1"
                              android:layout_marginTop="10dp"
                              android:layout_marginRight="12dp"
                              android:paddingLeft="18dp"/>

                          <LinearLayout
                              android:layout_width="1dp"
                              android:layout_height="40dp"
                              android:background="#CECECE">
                          </LinearLayout>

                          <EditText
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"/>

                      </LinearLayout>
                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/number_of_phone"
                          android:textColor="@color/black"
                          android:layout_alignParentRight="true"
                          android:layout_marginBottom="9dp"
                          android:layout_marginTop="24dp"
                          android:layout_marginRight="16dp"
                          android:fontFamily="@font/elmessirisemibold"
                          android:textSize="12dp"
                          />
                      <LinearLayout
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_alignParentRight="true"
                          android:background="@drawable/shape6"
                          android:layout_below="@+id/companyname"
                          android:orientation="horizontal"
                          >

<!--                          mohamed-->

                          <ImageView
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:src="@drawable/icon3"
                              android:layout_marginTop="10dp"
                              android:layout_marginRight="12dp"
                              android:paddingLeft="18dp"/>

                          <LinearLayout
                              android:layout_width="1dp"
                              android:layout_height="40dp"
                              android:background="#CECECE">
                          </LinearLayout>

                          <EditText
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"/>


                      </LinearLayout>
                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/add_info"
                          android:textColor="@color/black"
                          android:layout_alignParentRight="true"
                          android:layout_marginBottom="9dp"
                          android:layout_marginTop="24dp"
                          android:layout_marginRight="16dp"
                          android:fontFamily="@font/elmessirisemibold"
                          android:textSize="12dp"
                          />
                      <LinearLayout
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_alignParentRight="true"
                          android:background="@drawable/shape6"
                          android:layout_below="@+id/companyname"
                          android:orientation="horizontal"
                          >


                          <EditText
                              android:layout_width="match_parent"
                              android:layout_height="100dp"
                              android:hint="@string/add_info"
                              />

                      </LinearLayout>
                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/password"
                          android:textColor="@color/black"
                          android:layout_alignParentRight="true"
                          android:layout_marginBottom="9dp"
                          android:layout_marginTop="24dp"
                          android:layout_marginRight="16dp"
                          android:fontFamily="@font/elmessirisemibold"
                          android:textSize="12dp"
                          />
                      <LinearLayout
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_alignParentRight="true"
                          android:background="@drawable/shape6"
                          android:orientation="horizontal">

                          <ImageView
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:src="@drawable/icon7"
                              android:layout_marginTop="10dp"
                              android:layout_marginRight="12dp"
                              android:paddingLeft="18dp"/>

                          <LinearLayout
                              android:layout_width="1dp"
                              android:layout_height="40dp"
                              android:background="#CECECE"
                              android:layout_marginLeft="20dp"
                              >
                          </LinearLayout>

                          <RelativeLayout
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content">

                              <EditText
                                  android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:layout_marginLeft="50dp"

                                  />

                              <ImageView
                                  android:layout_width="wrap_content"
                                  android:layout_height="wrap_content"
                                  android:src="@drawable/icon9"
                                  android:layout_marginTop="21dp"
                                  android:layout_alignParentLeft="true"
                                  android:layout_marginLeft="18dp"
                                  />

                          </RelativeLayout>

                      </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/shape3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/elmessirisemibold"
                    android:text="@string/amendment"
                    android:textSize="16dp" />
            </RelativeLayout>


        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/img_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/personal_life"
        >

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image1"

            />

        <TextView
            android:id="@+id/nameofcompany"
            android:layout_below="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elahmadia"
            android:textSize="21dp"
            android:fontFamily="@font/elmessiribold"
            />
    </RelativeLayout>

</RelativeLayout>

