<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Customer_Login_Activity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:layout_marginTop="-280dp"
        />
    <ImageView
        android:id="@+id/text_scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/text_scroll"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="122dp"
        android:layout_marginBottom="100dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape1"
        android:layout_below="@+id/text_scroll">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layoutDirection="rtl"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Customer_Loign_In"
                android:layout_marginTop="22dp"
                android:textSize="24dp"
                android:textColor="@color/black"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="22dp"
                android:fontFamily="@font/elmessirimedium"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="28dp"
                android:layout_marginLeft="28dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/person"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/shape7"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="38dp"
                            android:layout_marginRight="18dp"
                            android:fontFamily="@font/elmessirimedium"
                            android:text="@string/Member"
                            android:textColor="@color/black"
                            android:textSize="20dp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="54dp"
                            android:layout_marginBottom="12dp"
                            android:paddingLeft="18dp"
                            android:src="@drawable/image6" />

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/shape7"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="38dp"
                            android:layout_marginRight="18dp"
                            android:fontFamily="@font/elmessirimedium"
                            android:text="@string/Company"
                            android:textColor="@color/black"
                            android:textSize="20dp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="54dp"
                            android:layout_marginBottom="12dp"
                            android:paddingLeft="18dp"
                            android:src="@drawable/image7" />

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="140dp"
                        android:layout_height="8dp"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/shape5"
                        android:orientation="horizontal">

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>